assets/style.css
/* Google Fonts

    Usage:
        font-family: 'Nunito', sans-serif;
        font-family: 'Roboto', sans-serif;
*/
@import url('https://fonts.googleapis.com/css2?family=Nunito:ital,wght@0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap');

:root {
    --foreground: #f5f5f5;
    --dark-foreground: #cccccc;
    --red-foreground: #ED5058;
    --blue-foreground: #4B9EF3;

    --background-dark: #2b2b2b;
    --background-dark-80: rgba(43, 43, 43, 0.8);
    --background-light: #E9E8E8;

    --gradient-blue: #4776E6;
    --gradient-dark-blue: rgba(71, 119, 230, 0.6);
    
    --gradient-purple: #8E54E9;
    --gradient-dark-purple: rgba(141, 84, 233, 0.6);
}

/* scrollbar */
::-webkit-scrollbar {
    width: 8px;
}

::-webkit-scrollbar-track {
    background: rgb(80, 80, 80);
}

::-webkit-scrollbar-thumb {
    background: linear-gradient(to top, var(--gradient-blue), var(--gradient-purple));
}

::-webkit-scrollbar-thumb:hover {
    background: linear-gradient(to top, var(--gradient-dark-blue), var(--gradient-dark-purple));
}

/* body */
body {
    background: var(--background-dark);
    color: var(--foreground);
    font-family: 'Roboto', sans-serif;
    text-align: justify;
}

h1, h2, h3, h4, h5, h6 {
    font-family: 'Nunito', sans-serif;
}

h1, h2 {
    font-weight: bold;
}

h1 {
    font-size: 45px;
}

h2 {
    font-size: 35px;
}

.text-gradient {
    color: transparent;
    background: linear-gradient(90deg, var(--gradient-purple), var(--gradient-blue));
    -webkit-background-clip: text;
    background-clip: text;
    text-decoration: none;
}

a.text-gradient:hover {
    color: transparent;
    background: linear-gradient(90deg, var(--gradient-dark-purple), var(--gradient-dark-blue));
    -webkit-background-clip: text;
    background-clip: text;
}

.background-light {
    background-color: var(--background-light);
    color: black;
}

.font-blue {
    color: var(--blue-foreground);
}

.font-red {
    color: var(--red-foreground);
}

/* header */
header {
    background: var(--background-dark-80);
}

header hr {
    background: linear-gradient(to right, var(--gradient-blue), var(--gradient-purple));
    height: 8px !important;
    opacity: 1;
}

/* Toggle button icon */
header .navbar-toggler {
    transition: all 0.2s;
    border-color: var(--dark-foreground);
}

header .navbar-toggler:hover {
    background: rgba(133, 133, 133, 0.2);
}

header .navbar-toggler:focus {
    box-shadow: none;
    border-color: var(--foreground);
}

header .navbar-toggler .toggle-icon {
    aspect-ratio: 8/7;
}

header .navbar-toggler .toggle-icon span {
    display: block;
    height: 4px;
    width: 30px;
    transition: all 0.2s;
    background-color: var(--dark-foreground);
    border-radius: 2px;
}

header .navbar-toggler:focus .toggle-icon span {
    background-color: var(--foreground);
}

header .navbar-toggler:not(.collapsed) .toggle-icon span:first-child {
    transform: rotate(41.18deg) scaleX(1.32);
    transform-origin: 6% 10%;
}

header .navbar-toggler:not(.collapsed) .toggle-icon span:nth-child(2) {
    opacity: 0;
}

header .navbar-toggler:not(.collapsed) .toggle-icon span:last-child {
    transform: rotate(-41.18deg) scaleX(1.32);
    transform-origin: 10% 90%;
}

/* Navigation links */
header .navgationLinks a {
    font-size: 20px;
    color: var(--dark-foreground) !important;
}

header .navgationLinks a:hover {
    color: var(--foreground) !important;
}

/* Main */
main {
    margin-top: 20vh;
}

/* Introduction Section */
main section:first-child .image div {
    z-index: -1;
    background: linear-gradient(135deg, var(--gradient-blue), var(--gradient-purple));
}

main section:first-child .image div img {
    background: var(--background-dark);
}

main section:first-child .intro div svg:not(:hover) {
    fill: var(--foreground);
}

main section:first-child .intro div svg:not(:hover) rect {
    fill: none;
}

/* Education Section */
#educationSection {
    border-radius: 50% / 30px;

    padding-top: 30px;
    padding-bottom: 30px;
}

#educationSection p.status {
    font-size: 12px;
}

/* Knowledge and Education Section */
:is(#educationSection, #knowledgeSection) h3 {
    font-size: 22px;
}

#educationSection p.subheading, #knowledgeSection p {
    font-size: 17px;
}

/* Contact Section */
#contactSection {
    position: relative;
    z-index: -1;
}

#contactSection::before, #contactSection::after {
    position: absolute;
    top: 0;
    content: '';
    width: 50%;
    height: 50px;

    background: var(--background-dark);
}

#contactSection::before {
    left: 0;

    border-bottom-right-radius: 100% 70%;
    border-bottom-left-radius: 50% 25%;
}

#contactSection::after {
    right: 0;

    border-bottom-left-radius: 100% 70%;
    border-bottom-right-radius: 50% 25%;
}

#contactSection h1:first-child {
    margin-top: 50px;
}

#contactSection :is(a, span) {
    font-size: 20px;
    font-weight: 500;
    color: inherit;
}

#contactSection a {
    transition: all 0.2s;
}

#contactSection a:hover {
    opacity: 0.7;
}

/* Main Section, Education Section, Knowledge Section & Contact Section */
#educationSection, #knowledgeSection, #contactSection {
    margin-top: 50vh;
}

/* footer */
footer {
    font-size: 15px;
}

footer a {
    font-weight: 600;
    text-decoration: none;
    color: inherit;
}

footer a:hover {
    color: var(--dark-foreground);
}

/*
    desktop
*/
@media (min-width: 768px) {
    main {
        margin-top: 30vh;
    }
}

